--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "prompt-squad-temp",
+  "name": "prompt-squad",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/abyssinica-sil": "^0.4.1",
+    "@expo-google-fonts/figtree": "^0.4.1",
+    "@expo/vector-icons": "^15.0.3",
+    "@google/generative-ai": "^0.24.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.90.1",
     "expo": "~54.0.31",
+    "expo-constants": "^18.0.13",
+    "expo-font": "~14.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "^8.0.11",
+    "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
+    "hugeicons-react-native": "^0.0.2",
+    "openai": "^6.16.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-shadow-2": "^7.1.2",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.9",
+    "supabase": "^2.72.6",
     "typescript": "~5.9.2"
   },
   "private": true
