--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "~19.1.0",
     "babel-preset-expo": "^54.0.9",
     "supabase": "^2.72.6",
+    "tar": "7.5.6",
     "typescript": "~5.9.2"
   },
   "private": true
