Fix TypeScript config to exclude non-existent provider files and clear stale cache

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,19 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    ".expo",
+    ".expo-shared",
+    "dist",
+    "**/providers/openai.ts",
+    "**/providers/gemini.ts"
   ]
 }
