--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo export -p web"
   },
   "dependencies": {
     "@expo-google-fonts/abyssinica-sil": "^0.4.1",
@@ -18,6 +19,7 @@
     "expo": "~54.0.31",
     "expo-constants": "^18.0.13",
     "expo-font": "~14.0.10",
+    "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.11",
