security: remove test files and update .gitignore to prevent API key exposure

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,15 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 .vercel
+
+# Test files (prevent accidental API key exposure)
+test-*.ts
+test-*.js
+**/test-*.ts
+**/test-*.js
+
+# Common sensitive file patterns
+*.secret
+*.secrets
+*credentials*
+*apikey*
